fix stacking model bug, realize kaggle predictions of test set for stacking model and nn model

--- a/Code/Neural_Networks/Neural_Networks.ipynb
+++ b/Code/Neural_Networks/Neural_Networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,64 +94,64 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "78/78 [==============================] - 1s 4ms/step - loss: 3.2257 - accuracy: 0.1804 - val_loss: 2.4107 - val_accuracy: 0.4044\n",
+      "78/78 [==============================] - 1s 4ms/step - loss: 3.2147 - accuracy: 0.1796 - val_loss: 2.3411 - val_accuracy: 0.4372\n",
       "Epoch 2/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 2.1022 - accuracy: 0.4179 - val_loss: 1.4305 - val_accuracy: 0.5811\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 2.1005 - accuracy: 0.4141 - val_loss: 1.4586 - val_accuracy: 0.5519\n",
       "Epoch 3/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 1.5159 - accuracy: 0.5311 - val_loss: 1.0821 - val_accuracy: 0.6758\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 1.5388 - accuracy: 0.5224 - val_loss: 1.1151 - val_accuracy: 0.6630\n",
       "Epoch 4/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 1.2174 - accuracy: 0.6007 - val_loss: 0.9550 - val_accuracy: 0.6903\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 1.2245 - accuracy: 0.6127 - val_loss: 0.9317 - val_accuracy: 0.6995\n",
       "Epoch 5/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 1.0552 - accuracy: 0.6536 - val_loss: 0.8345 - val_accuracy: 0.7468\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 1.0904 - accuracy: 0.6441 - val_loss: 0.8662 - val_accuracy: 0.7250\n",
       "Epoch 6/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.9606 - accuracy: 0.6858 - val_loss: 0.8197 - val_accuracy: 0.7359\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.9443 - accuracy: 0.6876 - val_loss: 0.7778 - val_accuracy: 0.7486\n",
       "Epoch 7/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.8445 - accuracy: 0.7129 - val_loss: 0.7523 - val_accuracy: 0.7468\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.8388 - accuracy: 0.7222 - val_loss: 0.7311 - val_accuracy: 0.7596\n",
       "Epoch 8/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.7829 - accuracy: 0.7386 - val_loss: 0.7084 - val_accuracy: 0.7741\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.7724 - accuracy: 0.7457 - val_loss: 0.6673 - val_accuracy: 0.7960\n",
       "Epoch 9/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.7248 - accuracy: 0.7520 - val_loss: 0.7025 - val_accuracy: 0.7832\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.7310 - accuracy: 0.7564 - val_loss: 0.6519 - val_accuracy: 0.7778\n",
       "Epoch 10/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.6765 - accuracy: 0.7682 - val_loss: 0.6393 - val_accuracy: 0.7741\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.6793 - accuracy: 0.7710 - val_loss: 0.6191 - val_accuracy: 0.7814\n",
       "Epoch 11/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.6416 - accuracy: 0.7811 - val_loss: 0.6178 - val_accuracy: 0.7923\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.6424 - accuracy: 0.7878 - val_loss: 0.6627 - val_accuracy: 0.7760\n",
       "Epoch 12/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.5794 - accuracy: 0.7967 - val_loss: 0.6500 - val_accuracy: 0.7905\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.6095 - accuracy: 0.7925 - val_loss: 0.6233 - val_accuracy: 0.7760\n",
       "Epoch 13/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.5683 - accuracy: 0.8109 - val_loss: 0.6317 - val_accuracy: 0.8051\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.5769 - accuracy: 0.8048 - val_loss: 0.6305 - val_accuracy: 0.7887\n",
       "Epoch 14/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.5452 - accuracy: 0.8158 - val_loss: 0.5852 - val_accuracy: 0.8015\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.5404 - accuracy: 0.8162 - val_loss: 0.5906 - val_accuracy: 0.7996\n",
       "Epoch 15/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.4968 - accuracy: 0.8301 - val_loss: 0.5447 - val_accuracy: 0.8106\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.5108 - accuracy: 0.8291 - val_loss: 0.5695 - val_accuracy: 0.7978\n",
       "Epoch 16/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.4941 - accuracy: 0.8319 - val_loss: 0.5408 - val_accuracy: 0.8270\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4863 - accuracy: 0.8313 - val_loss: 0.5668 - val_accuracy: 0.8124\n",
       "Epoch 17/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.4756 - accuracy: 0.8384 - val_loss: 0.5613 - val_accuracy: 0.8233\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4527 - accuracy: 0.8469 - val_loss: 0.5598 - val_accuracy: 0.8233\n",
       "Epoch 18/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.4668 - accuracy: 0.8384 - val_loss: 0.5595 - val_accuracy: 0.8233\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4345 - accuracy: 0.8532 - val_loss: 0.5481 - val_accuracy: 0.8179\n",
       "Epoch 19/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.4302 - accuracy: 0.8569 - val_loss: 0.5765 - val_accuracy: 0.8033\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4615 - accuracy: 0.8411 - val_loss: 0.5346 - val_accuracy: 0.8270\n",
       "Epoch 20/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.4395 - accuracy: 0.8490 - val_loss: 0.5381 - val_accuracy: 0.8106\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4149 - accuracy: 0.8540 - val_loss: 0.5281 - val_accuracy: 0.8306\n",
       "Epoch 21/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.4218 - accuracy: 0.8492 - val_loss: 0.5323 - val_accuracy: 0.8288\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4090 - accuracy: 0.8595 - val_loss: 0.5547 - val_accuracy: 0.8324\n",
       "Epoch 22/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.3792 - accuracy: 0.8751 - val_loss: 0.5066 - val_accuracy: 0.8361\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.3989 - accuracy: 0.8627 - val_loss: 0.5571 - val_accuracy: 0.8342\n",
       "Epoch 23/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.3731 - accuracy: 0.8714 - val_loss: 0.5195 - val_accuracy: 0.8525\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.3524 - accuracy: 0.8777 - val_loss: 0.5593 - val_accuracy: 0.8179\n",
       "Epoch 24/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.3583 - accuracy: 0.8797 - val_loss: 0.5271 - val_accuracy: 0.8270\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.3634 - accuracy: 0.8747 - val_loss: 0.5173 - val_accuracy: 0.8251\n",
       "Epoch 25/25\n",
-      "78/78 [==============================] - 0s 3ms/step - loss: 0.3692 - accuracy: 0.8700 - val_loss: 0.4959 - val_accuracy: 0.8397\n"
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.3317 - accuracy: 0.8850 - val_loss: 0.5013 - val_accuracy: 0.8251\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x29b3a5ce650>"
+       "<keras.callbacks.History at 0x2c843e6aa90>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,16 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18/18 [==============================] - 0s 1ms/step - loss: 0.4959 - accuracy: 0.8397\n",
+      "18/18 [==============================] - 0s 886us/step - loss: 0.5013 - accuracy: 0.8251\n",
       "\n",
-      "Validation Accuracy: 0.8397\n"
+      "Validation Accuracy: 0.8251\n"
      ]
     }
    ],
@@ -198,12 +198,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 保存模型（可选）\n",
     "model.save('../models/neural_model.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74/74 [==============================] - 0s 762us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_dir_test = '../2025_A2/test/Features'\n",
+    "meta_path_test = '../2025_A2/test/test_metadata.csv'\n",
+    "\n",
+    "color_df_test = pd.read_csv(f\"{feature_dir_test}/color_histogram.csv\")\n",
+    "hog_df_test = pd.read_csv(f\"{feature_dir_test}/hog_pca.csv\")\n",
+    "additional_df_test = pd.read_csv(f\"{feature_dir_test}/additional_features.csv\")\n",
+    "def merge_test(meta):\n",
+    "    return (meta\n",
+    "            .merge(additional_df_test,  on=\"image_path\")\n",
+    "            .merge(color_df_test, on=\"image_path\")\n",
+    "            .merge(hog_df_test,    on=\"image_path\"))\n",
+    "\n",
+    "metadata_df_test = pd.read_csv(meta_path_test)\n",
+    "\n",
+    "X_test = merge_test(metadata_df_test).drop(columns=[\"ClassId\", \"image_path\"])\n",
+    "\n",
+    "X_test_scaled = scaler.fit_transform(X_test)\n",
+    "\n",
+    "proba_nn_test = model.predict(X_test_scaled)\n",
+    "y_pred_test = np.argmax(proba_nn_test, axis=1)\n",
+    "test_ids = pd.read_csv(meta_path_test)['id']\n",
+    "submission = pd.DataFrame({\n",
+    "    'id': test_ids,\n",
+    "    'ClassId': y_pred_test\n",
+    "})\n",
+    "submission.to_csv('../nn.csv', index=False)"
    ]
   }
  ],
