--- a/Code/Stacking_model/stacking_model.ipynb
+++ b/Code/Stacking_model/stacking_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,18 +51,12 @@
     "metadata_df = pd.read_csv(metadata_path)\n",
     "\n",
     "X = merge(metadata_df).drop(columns=[\"ClassId\", \"image_path\"])\n",
-    "y = metadata_df['ClassId']\n",
-    "y_cat = to_categorical(y, num_classes=43)\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
-    "\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_scaled, y_cat, test_size=0.1, random_state=42)\n"
+    "y = metadata_df['ClassId']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -74,12 +68,12 @@
     }
    ],
    "source": [
-    "print(X_scaled.shape)"
+    "print(X.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "加载验证图像: 100%|██████████| 549/549 [00:00<00:00, 4597.70it/s]\n"
+      "加载验证图像: 100%|██████████| 5488/5488 [00:02<00:00, 2526.98it/s]\n"
      ]
     }
    ],
@@ -110,8 +104,7 @@
     "# -----------------------------\n",
     "# 4. CNN输入：准备验证图像张量\n",
     "# -----------------------------\n",
-    "image_paths = pd.read_csv(os.path.join(feature_dir, 'color_histogram.csv'))['image_path']  # 读取顺序\n",
-    "image_paths_val = image_paths.iloc[X_val.shape[0]*-1:].values  # 只取验证集对应图像路径\n",
+    "image_paths_val = pd.read_csv(metadata_path)['image_path']  # 读取顺序\n",
     "\n",
     "cnn_val_images = []\n",
     "for fname in tqdm(image_paths_val, desc=\"加载验证图像\"):\n",
@@ -123,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -140,23 +133,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Administrator\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18/18 [==============================] - 0s 823us/step\n",
-      "18/18 [==============================] - 0s 14ms/step\n"
+      "172/172 [==============================] - 0s 1ms/step\n",
+      "172/172 [==============================] - 3s 15ms/step\n"
      ]
     }
    ],
@@ -165,21 +150,24 @@
     "# -----------------------------\n",
     "# 5. 各模型输出概率\n",
     "# -----------------------------\n",
-    "proba_rf = rf_model.predict_proba(X_val)\n",
-    "proba_nn = nn_model.predict(X_val)\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "proba_rf = rf_model.predict_proba(X)\n",
+    "proba_nn = nn_model.predict(X_scaled)\n",
     "proba_cnn = cnn_model.predict(cnn_val_images)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Stacking Validation Accuracy: 0.8725\n"
+      "✅ Stacking Validation Accuracy: 0.9956\n"
      ]
     }
    ],
@@ -189,7 +177,7 @@
     "# 6. 构造 stacking 输入 + 训练 meta learner\n",
     "# -----------------------------\n",
     "X_meta = np.concatenate([proba_rf, proba_nn, proba_cnn], axis=1)\n",
-    "y_meta = y_val.argmax(axis=1)\n",
+    "y_meta = y\n",
     "\n",
     "meta_learner = LogisticRegression(max_iter=1000)\n",
     "meta_learner.fit(X_meta, y_meta)\n",
@@ -197,6 +185,90 @@
     "y_pred = meta_learner.predict(X_meta)\n",
     "acc = accuracy_score(y_meta, y_pred)\n",
     "print(f\"✅ Stacking Validation Accuracy: {acc:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74/74 [==============================] - 0s 939us/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "加载验证图像: 100%|██████████| 2353/2353 [00:00<00:00, 4830.06it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1/74 [..............................] - ETA: 2s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74/74 [==============================] - 1s 15ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_dir_test = '../2025_A2/test/Features'\n",
+    "meta_path_test = '../2025_A2/test/test_metadata.csv'\n",
+    "\n",
+    "color_df_test = pd.read_csv(f\"{feature_dir_test}/color_histogram.csv\")\n",
+    "hog_df_test = pd.read_csv(f\"{feature_dir_test}/hog_pca.csv\")\n",
+    "additional_df_test = pd.read_csv(f\"{feature_dir_test}/additional_features.csv\")\n",
+    "def merge(meta):\n",
+    "    return (meta\n",
+    "            .merge(additional_df_test,  on=\"image_path\")\n",
+    "            .merge(color_df_test, on=\"image_path\")\n",
+    "            .merge(hog_df_test,    on=\"image_path\"))\n",
+    "\n",
+    "metadata_df_test = pd.read_csv(meta_path_test)\n",
+    "\n",
+    "X_test = merge(metadata_df_test).drop(columns=[\"ClassId\", \"image_path\"])\n",
+    "proba_rf_test = rf_model.predict_proba(X_test)\n",
+    "\n",
+    "X_scaled_test = scaler.fit_transform(X_test)\n",
+    "proba_nn_test = nn_model.predict(X_scaled_test)\n",
+    "\n",
+    "image_dir_test = '../2025_A2/test'\n",
+    "\n",
+    "image_paths_val_test = pd.read_csv(meta_path_test)['image_path']  # 读取顺序\n",
+    "cnn_val_images_test = []\n",
+    "for fname in tqdm(image_paths_val_test, desc=\"加载验证图像\"):\n",
+    "    img = load_img(os.path.join(image_dir_test, fname), target_size=(64, 64))\n",
+    "    img_array = img_to_array(img) / 255.0\n",
+    "    cnn_val_images_test.append(img_array)\n",
+    "cnn_val_images_test = np.array(cnn_val_images_test)\n",
+    "proba_cnn_test = cnn_model.predict(cnn_val_images_test)\n",
+    "\n",
+    "\n",
+    "X_meta_test = np.concatenate([proba_rf_test, proba_nn_test, proba_cnn_test], axis=1)\n",
+    "y_pred_test = meta_learner.predict(X_meta_test)\n",
+    "test_ids = pd.read_csv(meta_path_test)['id']  # eg: 1, 3105, 136\n",
+    "submission = pd.DataFrame({\n",
+    "    'id': test_ids,\n",
+    "    'ClassId': y_pred_test\n",
+    "})\n",
+    "submission.to_csv('../stacking_model_result.csv', index=False)"
    ]
   }
  ],
