added kaggle-style csv output for random forest classifier

--- a/Code/CNN_Implementation/cnn_v2.ipynb
+++ b/Code/CNN_Implementation/cnn_v2.ipynb
@@ -3171,7 +3171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "a4715b8b",
    "metadata": {},
    "outputs": [
@@ -3186,7 +3186,7 @@
    ],
    "source": [
     "df_original = pd.read_csv(TEST_DATA_PATH + '/test_metadata.csv')\n",
-    "df_verify = pd.read_csv('../kaggle_filled.csv')\n",
+    "df_verify = pd.read_csv('../cnn_out.csv')\n",
     "\n",
     "print(df_original.shape)\n",
     "print(df_verify.shape)"
